--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You'll see my portfolio here</noscript>
+    <noscript>Opps! You could see my portfolio webpage but...</noscript>
     <div id="root"></div>
-
     <!--Fontawesome kit-->
     <script
       src="https://kit.fontawesome.com/ac064ab494.js"
