--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Emre Avci | Front-end Developer</title>
   </head>
   <body>
     <noscript>Opps! You could see my portfolio webpage but...</noscript>
